--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,7 @@ dependencies {
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.android.material:material:1.1.0-alpha08'
+    implementation 'com.google.android.material:material:1.1.0-alpha09'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -55,6 +55,8 @@ dependencies {
     //RxJava
     implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
     implementation "io.reactivex.rxjava2:rxjava:2.2.10"
+    implementation "com.jakewharton.rxbinding3:rxbinding:3.0.0"
+    implementation 'com.jakewharton.rxbinding3:rxbinding-core:3.0.0'
     //Retrofit
     implementation "com.squareup.retrofit2:retrofit:2.6.0"
     implementation "com.squareup.retrofit2:adapter-rxjava2:2.6.0"
@@ -70,4 +72,14 @@ dependencies {
     implementation "androidx.room:room-ktx:2.1.0"
     implementation "androidx.room:room-rxjava2:2.1.0"
     kapt "androidx.room:room-compiler:2.1.0"
+    //Dagger
+    implementation "com.google.dagger:dagger:2.24"
+    implementation "com.google.dagger:dagger-android:2.24"
+    implementation "com.google.dagger:dagger-android-support:2.24"
+    kapt "com.google.dagger:dagger-compiler:2.24"
+    kapt "com.google.dagger:dagger-android-processor:2.24"
+    //JodaTime
+    implementation 'joda-time:joda-time:2.10.3'
+    //Expandable layout
+    implementation 'net.cachapa.expandablelayout:expandablelayout:2.9.2'
 }
