--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         <activity
                 android:name="com.bubllbub.exchangerates.views.MainActivity"
                 android:label="@string/app_name"
-                android:theme="@style/Theme.ExRates.NoActionBar">
+                android:theme="@style/Theme.ExRates.NoActionBar"
+                android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
