--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,8 @@ apply plugin: 'kotlin-android-extensions'
 
 apply plugin: 'kotlin-kapt'
 
+apply from: 'versions.gradle'
+
 android {
     compileSdkVersion 28
     defaultConfig {
@@ -50,7 +52,6 @@ dependencies {
     //Databinding
     kapt "com.android.databinding:compiler:3.2.0-alpha10"
     //MVVM
-    def lifecycle_version = "1.1.1"
     implementation "android.arch.lifecycle:runtime:$lifecycle_version"
     implementation "android.arch.lifecycle:extensions:$lifecycle_version"
     implementation "android.arch.lifecycle:common-java8:$lifecycle_version"
@@ -60,7 +61,6 @@ dependencies {
     implementation "com.jakewharton.rxbinding3:rxbinding:3.0.0"
     implementation 'com.jakewharton.rxbinding3:rxbinding-core:3.0.0'
     //Retrofit
-    def retrofit_version = "2.6.0"
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
@@ -71,13 +71,11 @@ dependencies {
     //Betterpickers
     implementation 'com.code-troopers.betterpickers:library:3.1.0'
     //Room
-    def room_version = "2.1.0"
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     implementation "androidx.room:room-rxjava2:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     //Dagger
-    def dagger_version = "2.24"
     implementation "com.google.dagger:dagger:$dagger_version"
     implementation "com.google.dagger:dagger-android:$dagger_version"
     implementation "com.google.dagger:dagger-android-support:$dagger_version"
@@ -88,7 +86,6 @@ dependencies {
     //Expandable layout
     implementation 'net.cachapa.expandablelayout:expandablelayout:2.9.2'
     //Work manager
-    def workmanager_version = "2.1.0"
     implementation "androidx.work:work-runtime-ktx:$workmanager_version"
     implementation "androidx.work:work-rxjava2:$workmanager_version"
 
